@@ -7,10 +7,11 @@ filebeat:
     index: logs-generic-default
     processors:
       - add_fields:
+          target: "stream"
           fields:
-            stream.type: logs
-            stream.dataset: generic
-            stream.namespace: default
+            type: logs
+            dataset: generic
+            namespace: default
 output:
   elasticsearch:
     hosts:
