@@ -6,10 +6,11 @@ metricbeat:
     hosts: ["http://127.0.0.1:8080"]
     processors:
     - add_fields:
+        target: "stream"
         fields:
-          stream.type: metrics
-          stream.dataset: docker.status
-          stream.namespace: default
+          type: metrics
+          dataset: docker.status
+          namespace: default
   - module: apache
     metricsets: [info]
     index: metrics-generic-testing
@@ -19,10 +20,11 @@ metricbeat:
           fields:
             should_be: first
       - add_fields:
+          target: "stream"
           fields:
-            stream.type: metrics
-            stream.dataset: generic
-            stream.namespace: testing
+            type: metrics
+            dataset: generic
+            namespace: testing
 output:
   elasticsearch:
     hosts: [127.0.0.1:9200, 127.0.0.1:9300]
